...
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <Button
            android:id="@+id/reviewsButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:textColor="#000"
            android:background="#0000"
            android:text="Guests Reviews"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/roomButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:paddingEnd="16dp"
            android:textColor="#000"
...
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="16sp"
                android:text="Reviews"
                android:textColor="#000"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
...
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"
            android:text="Rooms"
            android:textColor="#000"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/l2"
...
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="First name"
                    android:textColor="#000"/>
                <EditText
                    android:background="#0000"
                    android:id="@+id/firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="16sp"
                    android:text="First name"
                    android:textColor="#000"/>
...
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="Last name"
                    android:textColor="#000"/>
                <EditText
                    android:background="#0000"
                    android:id="@+id/lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="16sp"
                    android:text="Last name"
                    android:textColor="#000"/>
...
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="Check-in date"
                    android:textColor="#000"/>
                <EditText
                    android:background="#0000"
                    android:id="@+id/inDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="16sp"
                    android:text="First name"
                    android:textColor="#000"/>
...
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="Check-out date"
                    android:textColor="#000"/>
                <EditText
                    android:background="#0000"
                    android:id="@+id/outDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="16sp"
                    android:text="Last name"
                    android:textColor="#000"/>
...
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="adults"
                    android:textColor="#000"/>
                <EditText
                    android:background="#0000"
                    android:id="@+id/adults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="children"
                    android:textColor="#000"/>
                <EditText
                    android:background="#0000"
                    android:id="@+id/children"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
