<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">
    <FrameLayout
        android:id="@+id/f0"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="The Alps' Hotel"
                android:textColor="#000"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"/>
            <View
                android:layout_width="8dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="#00f"/>
            <View
                android:layout_width="8dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="#fff"
                />
            <View
                android:layout_width="8dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="#f00"/>
        </LinearLayout>
        <Button
            android:id="@+id/profile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/baseline_account_circle_24"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"/>
    </FrameLayout>
    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="4dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>